welcome.lessons.welcome.bat.bool2.ShareDigit.scala.error
shareDigit:3: error: '=' expected but ';' found.
  var d == a%10
^shareDigit:4: error: '=' expected but ';' found.
  var e == b/10
^shareDigit:5: error: '=' expected but ';' found.
  var f == b%10
^shareDigit:6: error: '=' expected but ';' found.
  if (c==e || c==f || d == e || d ==f){
^